tests/errors/if_different_types.err
Type Error: `if` and `else` branches evaluate to different types
1: print(if (1) {
            ^
